kk_2018_09/resenje/parser.output
Terminals unused in grammar

    id_liste_token


Grammar

    0 $accept: Program $end

    1 Program: Program Funkcija
    2        | Funkcija

    3 Funkcija: id_token '(' Args ')' Blok

    4 Args: Args1
    5     | %empty

    6 Args1: Args1 ',' id_token
    7      | id_token

    8 Blok: '{' NizNaredbi '}'

    9 NizNaredbi: NizNaredbi ';' Naredba
   10           | Naredba

   11 Naredba: print_token E
   12        | set_token id_token to_token E
   13        | E
   14        | Blok
   15        | while_token '(' E ')' Naredba

   16 E: E and_token E
   17  | E or_token E
   18  | E xor_token E
   19  | not_token E
   20  | E shl_token E
   21  | E shr_token E
   22  | num_token
   23  | '(' E ')'
   24  | id_token
   25  | call_token id_token '(' ')'
   26  | call_token id_token '(' NizE ')'
   27  | E '+' E
   28  | E '<' E

   29 NizE: NizE ',' E
   30     | E


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 3 15 23 25 26
    ')' (41) 3 15 23 25 26
    '+' (43) 27
    ',' (44) 6 29
    ';' (59) 9
    '<' (60) 28
    '{' (123) 8
    '}' (125) 8
    error (256)
    num_token <u> (258) 22
    id_token <s> (259) 3 6 7 12 24 25 26
    id_liste_token <s> (260)
    print_token (261) 11
    and_token (262) 16
    or_token (263) 17
    xor_token (264) 18
    not_token (265) 19
    shl_token (266) 20
    shr_token (267) 21
    set_token (268) 12
    to_token (269) 12
    call_token (270) 25 26
    while_token (271) 15


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    Program (26)
        on left: 1 2
        on right: 0 1
    Funkcija (27)
        on left: 3
        on right: 1 2
    Args <vs> (28)
        on left: 4 5
        on right: 3
    Args1 <vs> (29)
        on left: 6 7
        on right: 4 6
    Blok <e> (30)
        on left: 8
        on right: 3 14
    NizNaredbi <v> (31)
        on left: 9 10
        on right: 8 9
    Naredba <e> (32)
        on left: 11 12 13 14 15
        on right: 9 10 15
    E <e> (33)
        on left: 16 17 18 19 20 21 22 23 24 25 26 27 28
        on right: 11 12 13 15 16 17 18 19 20 21 23 27 28 29 30
    NizE <v> (34)
        on left: 29 30
        on right: 26 29


State 0

    0 $accept: . Program $end

    id_token  shift, and go to state 1

    Program   go to state 2
    Funkcija  go to state 3


State 1

    3 Funkcija: id_token . '(' Args ')' Blok

    '('  shift, and go to state 4


State 2

    0 $accept: Program . $end
    1 Program: Program . Funkcija

    $end      shift, and go to state 5
    id_token  shift, and go to state 1

    Funkcija  go to state 6


State 3

    2 Program: Funkcija .

    $default  reduce using rule 2 (Program)


State 4

    3 Funkcija: id_token '(' . Args ')' Blok

    id_token  shift, and go to state 7

    $default  reduce using rule 5 (Args)

    Args   go to state 8
    Args1  go to state 9


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    1 Program: Program Funkcija .

    $default  reduce using rule 1 (Program)


State 7

    7 Args1: id_token .

    $default  reduce using rule 7 (Args1)


State 8

    3 Funkcija: id_token '(' Args . ')' Blok

    ')'  shift, and go to state 10


State 9

    4 Args: Args1 .
    6 Args1: Args1 . ',' id_token

    ','  shift, and go to state 11

    $default  reduce using rule 4 (Args)


State 10

    3 Funkcija: id_token '(' Args ')' . Blok

    '{'  shift, and go to state 12

    Blok  go to state 13


State 11

    6 Args1: Args1 ',' . id_token

    id_token  shift, and go to state 14


State 12

    8 Blok: '{' . NizNaredbi '}'

    num_token    shift, and go to state 15
    id_token     shift, and go to state 16
    print_token  shift, and go to state 17
    not_token    shift, and go to state 18
    set_token    shift, and go to state 19
    call_token   shift, and go to state 20
    while_token  shift, and go to state 21
    '('          shift, and go to state 22
    '{'          shift, and go to state 12

    Blok        go to state 23
    NizNaredbi  go to state 24
    Naredba     go to state 25
    E           go to state 26


State 13

    3 Funkcija: id_token '(' Args ')' Blok .

    $default  reduce using rule 3 (Funkcija)


State 14

    6 Args1: Args1 ',' id_token .

    $default  reduce using rule 6 (Args1)


State 15

   22 E: num_token .

    $default  reduce using rule 22 (E)


State 16

   24 E: id_token .

    $default  reduce using rule 24 (E)


State 17

   11 Naredba: print_token . E

    num_token   shift, and go to state 15
    id_token    shift, and go to state 16
    not_token   shift, and go to state 18
    call_token  shift, and go to state 20
    '('         shift, and go to state 22

    E  go to state 27


State 18

   19 E: not_token . E

    num_token   shift, and go to state 15
    id_token    shift, and go to state 16
    not_token   shift, and go to state 18
    call_token  shift, and go to state 20
    '('         shift, and go to state 22

    E  go to state 28


State 19

   12 Naredba: set_token . id_token to_token E

    id_token  shift, and go to state 29


State 20

   25 E: call_token . id_token '(' ')'
   26  | call_token . id_token '(' NizE ')'

    id_token  shift, and go to state 30


State 21

   15 Naredba: while_token . '(' E ')' Naredba

    '('  shift, and go to state 31


State 22

   23 E: '(' . E ')'

    num_token   shift, and go to state 15
    id_token    shift, and go to state 16
    not_token   shift, and go to state 18
    call_token  shift, and go to state 20
    '('         shift, and go to state 22

    E  go to state 32


State 23

   14 Naredba: Blok .

    $default  reduce using rule 14 (Naredba)


State 24

    8 Blok: '{' NizNaredbi . '}'
    9 NizNaredbi: NizNaredbi . ';' Naredba

    '}'  shift, and go to state 33
    ';'  shift, and go to state 34


State 25

   10 NizNaredbi: Naredba .

    $default  reduce using rule 10 (NizNaredbi)


State 26

   13 Naredba: E .
   16 E: E . and_token E
   17  | E . or_token E
   18  | E . xor_token E
   20  | E . shl_token E
   21  | E . shr_token E
   27  | E . '+' E
   28  | E . '<' E

    and_token  shift, and go to state 35
    or_token   shift, and go to state 36
    xor_token  shift, and go to state 37
    shl_token  shift, and go to state 38
    shr_token  shift, and go to state 39
    '<'        shift, and go to state 40
    '+'        shift, and go to state 41

    $default  reduce using rule 13 (Naredba)


State 27

   11 Naredba: print_token E .
   16 E: E . and_token E
   17  | E . or_token E
   18  | E . xor_token E
   20  | E . shl_token E
   21  | E . shr_token E
   27  | E . '+' E
   28  | E . '<' E

    and_token  shift, and go to state 35
    or_token   shift, and go to state 36
    xor_token  shift, and go to state 37
    shl_token  shift, and go to state 38
    shr_token  shift, and go to state 39
    '<'        shift, and go to state 40
    '+'        shift, and go to state 41

    $default  reduce using rule 11 (Naredba)


State 28

   16 E: E . and_token E
   17  | E . or_token E
   18  | E . xor_token E
   19  | not_token E .
   20  | E . shl_token E
   21  | E . shr_token E
   27  | E . '+' E
   28  | E . '<' E

    $default  reduce using rule 19 (E)


State 29

   12 Naredba: set_token id_token . to_token E

    to_token  shift, and go to state 42


State 30

   25 E: call_token id_token . '(' ')'
   26  | call_token id_token . '(' NizE ')'

    '('  shift, and go to state 43


State 31

   15 Naredba: while_token '(' . E ')' Naredba

    num_token   shift, and go to state 15
    id_token    shift, and go to state 16
    not_token   shift, and go to state 18
    call_token  shift, and go to state 20
    '('         shift, and go to state 22

    E  go to state 44


State 32

   16 E: E . and_token E
   17  | E . or_token E
   18  | E . xor_token E
   20  | E . shl_token E
   21  | E . shr_token E
   23  | '(' E . ')'
   27  | E . '+' E
   28  | E . '<' E

    and_token  shift, and go to state 35
    or_token   shift, and go to state 36
    xor_token  shift, and go to state 37
    shl_token  shift, and go to state 38
    shr_token  shift, and go to state 39
    '<'        shift, and go to state 40
    '+'        shift, and go to state 41
    ')'        shift, and go to state 45


State 33

    8 Blok: '{' NizNaredbi '}' .

    $default  reduce using rule 8 (Blok)


State 34

    9 NizNaredbi: NizNaredbi ';' . Naredba

    num_token    shift, and go to state 15
    id_token     shift, and go to state 16
    print_token  shift, and go to state 17
    not_token    shift, and go to state 18
    set_token    shift, and go to state 19
    call_token   shift, and go to state 20
    while_token  shift, and go to state 21
    '('          shift, and go to state 22
    '{'          shift, and go to state 12

    Blok     go to state 23
    Naredba  go to state 46
    E        go to state 26


State 35

   16 E: E and_token . E

    num_token   shift, and go to state 15
    id_token    shift, and go to state 16
    not_token   shift, and go to state 18
    call_token  shift, and go to state 20
    '('         shift, and go to state 22

    E  go to state 47


State 36

   17 E: E or_token . E

    num_token   shift, and go to state 15
    id_token    shift, and go to state 16
    not_token   shift, and go to state 18
    call_token  shift, and go to state 20
    '('         shift, and go to state 22

    E  go to state 48


State 37

   18 E: E xor_token . E

    num_token   shift, and go to state 15
    id_token    shift, and go to state 16
    not_token   shift, and go to state 18
    call_token  shift, and go to state 20
    '('         shift, and go to state 22

    E  go to state 49


State 38

   20 E: E shl_token . E

    num_token   shift, and go to state 15
    id_token    shift, and go to state 16
    not_token   shift, and go to state 18
    call_token  shift, and go to state 20
    '('         shift, and go to state 22

    E  go to state 50


State 39

   21 E: E shr_token . E

    num_token   shift, and go to state 15
    id_token    shift, and go to state 16
    not_token   shift, and go to state 18
    call_token  shift, and go to state 20
    '('         shift, and go to state 22

    E  go to state 51


State 40

   28 E: E '<' . E

    num_token   shift, and go to state 15
    id_token    shift, and go to state 16
    not_token   shift, and go to state 18
    call_token  shift, and go to state 20
    '('         shift, and go to state 22

    E  go to state 52


State 41

   27 E: E '+' . E

    num_token   shift, and go to state 15
    id_token    shift, and go to state 16
    not_token   shift, and go to state 18
    call_token  shift, and go to state 20
    '('         shift, and go to state 22

    E  go to state 53


State 42

   12 Naredba: set_token id_token to_token . E

    num_token   shift, and go to state 15
    id_token    shift, and go to state 16
    not_token   shift, and go to state 18
    call_token  shift, and go to state 20
    '('         shift, and go to state 22

    E  go to state 54


State 43

   25 E: call_token id_token '(' . ')'
   26  | call_token id_token '(' . NizE ')'

    num_token   shift, and go to state 15
    id_token    shift, and go to state 16
    not_token   shift, and go to state 18
    call_token  shift, and go to state 20
    '('         shift, and go to state 22
    ')'         shift, and go to state 55

    E     go to state 56
    NizE  go to state 57


State 44

   15 Naredba: while_token '(' E . ')' Naredba
   16 E: E . and_token E
   17  | E . or_token E
   18  | E . xor_token E
   20  | E . shl_token E
   21  | E . shr_token E
   27  | E . '+' E
   28  | E . '<' E

    and_token  shift, and go to state 35
    or_token   shift, and go to state 36
    xor_token  shift, and go to state 37
    shl_token  shift, and go to state 38
    shr_token  shift, and go to state 39
    '<'        shift, and go to state 40
    '+'        shift, and go to state 41
    ')'        shift, and go to state 58


State 45

   23 E: '(' E ')' .

    $default  reduce using rule 23 (E)


State 46

    9 NizNaredbi: NizNaredbi ';' Naredba .

    $default  reduce using rule 9 (NizNaredbi)


State 47

   16 E: E . and_token E
   16  | E and_token E .
   17  | E . or_token E
   18  | E . xor_token E
   20  | E . shl_token E
   21  | E . shr_token E
   27  | E . '+' E
   28  | E . '<' E

    shl_token  shift, and go to state 38
    shr_token  shift, and go to state 39
    '<'        shift, and go to state 40
    '+'        shift, and go to state 41

    $default  reduce using rule 16 (E)


State 48

   16 E: E . and_token E
   17  | E . or_token E
   17  | E or_token E .
   18  | E . xor_token E
   20  | E . shl_token E
   21  | E . shr_token E
   27  | E . '+' E
   28  | E . '<' E

    and_token  shift, and go to state 35
    xor_token  shift, and go to state 37
    shl_token  shift, and go to state 38
    shr_token  shift, and go to state 39
    '<'        shift, and go to state 40
    '+'        shift, and go to state 41

    $default  reduce using rule 17 (E)


State 49

   16 E: E . and_token E
   17  | E . or_token E
   18  | E . xor_token E
   18  | E xor_token E .
   20  | E . shl_token E
   21  | E . shr_token E
   27  | E . '+' E
   28  | E . '<' E

    and_token  shift, and go to state 35
    shl_token  shift, and go to state 38
    shr_token  shift, and go to state 39
    '<'        shift, and go to state 40
    '+'        shift, and go to state 41

    $default  reduce using rule 18 (E)


State 50

   16 E: E . and_token E
   17  | E . or_token E
   18  | E . xor_token E
   20  | E . shl_token E
   20  | E shl_token E .
   21  | E . shr_token E
   27  | E . '+' E
   28  | E . '<' E

    '+'  shift, and go to state 41

    $default  reduce using rule 20 (E)


State 51

   16 E: E . and_token E
   17  | E . or_token E
   18  | E . xor_token E
   20  | E . shl_token E
   21  | E . shr_token E
   21  | E shr_token E .
   27  | E . '+' E
   28  | E . '<' E

    shl_token  shift, and go to state 38
    '+'        shift, and go to state 41

    $default  reduce using rule 21 (E)


State 52

   16 E: E . and_token E
   17  | E . or_token E
   18  | E . xor_token E
   20  | E . shl_token E
   21  | E . shr_token E
   27  | E . '+' E
   28  | E . '<' E
   28  | E '<' E .

    shl_token  shift, and go to state 38
    shr_token  shift, and go to state 39
    '+'        shift, and go to state 41

    $default  reduce using rule 28 (E)


State 53

   16 E: E . and_token E
   17  | E . or_token E
   18  | E . xor_token E
   20  | E . shl_token E
   21  | E . shr_token E
   27  | E . '+' E
   27  | E '+' E .
   28  | E . '<' E

    $default  reduce using rule 27 (E)


State 54

   12 Naredba: set_token id_token to_token E .
   16 E: E . and_token E
   17  | E . or_token E
   18  | E . xor_token E
   20  | E . shl_token E
   21  | E . shr_token E
   27  | E . '+' E
   28  | E . '<' E

    and_token  shift, and go to state 35
    or_token   shift, and go to state 36
    xor_token  shift, and go to state 37
    shl_token  shift, and go to state 38
    shr_token  shift, and go to state 39
    '<'        shift, and go to state 40
    '+'        shift, and go to state 41

    $default  reduce using rule 12 (Naredba)


State 55

   25 E: call_token id_token '(' ')' .

    $default  reduce using rule 25 (E)


State 56

   16 E: E . and_token E
   17  | E . or_token E
   18  | E . xor_token E
   20  | E . shl_token E
   21  | E . shr_token E
   27  | E . '+' E
   28  | E . '<' E
   30 NizE: E .

    and_token  shift, and go to state 35
    or_token   shift, and go to state 36
    xor_token  shift, and go to state 37
    shl_token  shift, and go to state 38
    shr_token  shift, and go to state 39
    '<'        shift, and go to state 40
    '+'        shift, and go to state 41

    $default  reduce using rule 30 (NizE)


State 57

   26 E: call_token id_token '(' NizE . ')'
   29 NizE: NizE . ',' E

    ')'  shift, and go to state 59
    ','  shift, and go to state 60


State 58

   15 Naredba: while_token '(' E ')' . Naredba

    num_token    shift, and go to state 15
    id_token     shift, and go to state 16
    print_token  shift, and go to state 17
    not_token    shift, and go to state 18
    set_token    shift, and go to state 19
    call_token   shift, and go to state 20
    while_token  shift, and go to state 21
    '('          shift, and go to state 22
    '{'          shift, and go to state 12

    Blok     go to state 23
    Naredba  go to state 61
    E        go to state 26


State 59

   26 E: call_token id_token '(' NizE ')' .

    $default  reduce using rule 26 (E)


State 60

   29 NizE: NizE ',' . E

    num_token   shift, and go to state 15
    id_token    shift, and go to state 16
    not_token   shift, and go to state 18
    call_token  shift, and go to state 20
    '('         shift, and go to state 22

    E  go to state 62


State 61

   15 Naredba: while_token '(' E ')' Naredba .

    $default  reduce using rule 15 (Naredba)


State 62

   16 E: E . and_token E
   17  | E . or_token E
   18  | E . xor_token E
   20  | E . shl_token E
   21  | E . shr_token E
   27  | E . '+' E
   28  | E . '<' E
   29 NizE: NizE ',' E .

    and_token  shift, and go to state 35
    or_token   shift, and go to state 36
    xor_token  shift, and go to state 37
    shl_token  shift, and go to state 38
    shr_token  shift, and go to state 39
    '<'        shift, and go to state 40
    '+'        shift, and go to state 41

    $default  reduce using rule 29 (NizE)
